--- a/content/Anhang/Umfragebogen.tex
+++ b/content/Anhang/Umfragebogen.tex
@@ -58,7 +58,7 @@ Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 
   
 \end{longtable}
 
-\subsection{Medien und Mediennutzung}
+\subsection{Medien und Mediennutzung}\label{sec:app_mediennutzung}
 Im Folgenden werden Sie gebeten, Angaben über verschiedene Medien-Tätigkeiten so exakt wie möglich zu machen, die Sie während der Betreuung von Ihrem Kind ausüben. Stellen Sie sich dabei die letzte Situation vor, in der Sie während mindestens zwei Stunden alleine mit Ihrem Kind waren.
 
 \vspace{2mm}
