sec.Ergebnisse: medien balkendiagramm

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -125,7 +125,7 @@ Insgesamt schlossen brutto 248 Personen die Umfrage ab. 1454 Personen sind zumin
 
 Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9\%). Eine Personen wurde ausgemustert, da sie beim Jahrgang einen fehlerhaften Wert angegeben hatte (Jg 2017). Zwei weitere Person gaben an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da die Personen bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein geantwortet haben. 25 Personen wurden entfernt, da das Alter ihrer Kinder 13 Monate überstieg. 
 
-Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren werden in Tabelle \titleref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbeteruung in Tagen ist in Anhang \ref{app:Gesamtstichprobe} zu finden).
+Die Merkmale Geschlecht, Alter in Jahren, Geschlecht Kind und Alter Kind in Jahren werden in Tabelle \titleref{table:Stichprobe} dargestellt (eine um die Merkmale Familieneinkommen, Bidlungsabschluss, Anzahl Personen im Haushalt, Lebensfrom und Fremdbetreuung in Tagen ist in Tabelle \ref{table:Gesamtstichprobe} Anhang \ref{app:Gesamtstichprobe} zu finden).
 
 \begin{table}[htbp]
 
@@ -167,8 +167,10 @@ Im Durchschnitt leben zwischen 2 und 8 Personen im Haushalt mit einem Durchschni
 
 Insgesamt haben 158 Personen am Wettbewerb teilgenommen, was 72.5\% der Stichprobe entspricht. Eine Person liess sich Versuchspersonen anrechnen (.5\%) und 59 (27\%) Personen wollten weder am Wettbewerb teilnehmen noch sich Versuchspersonenstunden anrechnen lassen.
 
-\subsection{Datenaufbereitung}\label{sec:Datenaufbereitung}
-Die erhobenen Daten wurden mittels SPSS Version 25 für Mac OS X aufbereitet. Die Stichprobendaten wurden direkt aus der Enterprise Feedback Suite \cite{Questback2018} mittels Datenexport für SPSS exportiert. Allfällige Fehlerquellen wurden bei der Datenbereinigung korrigiert. Dies wurde durch die Umfragesoftware erleichtert, indem nur abgeschlossene Datensätze exportiert wurden und eine erste Werteprüfung bereits bei der Eingabe erfolgte (z.B.: es wurden nur Zahlen bei der Eingabe des Jahrgangs zugelassen). Fehlende Werte wurden bereits von der Umfragesoftware gesetzt und konnten innerhalb von SPSS mit einem Wertelabel versehen werden. Für die Berechnung der Mediennutzung, der Bindung, des Stressniveaus und des subjektiven Wohlbefindens wurden zusätzliche Variablen in SPSS erstellt und anhand der generierten Daten berechnet (für die Formel der Berechnung siehe Kapitel \titleref{sec:Design}).
-
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
+TBD: Beispiel aus DGP Richtlinien - In der Bedingung 1 („gewalthaltiges Video“) ist die applizierte Menge scharfer Sauce im Durchschnitt höher als in der Bedingung 2 („nichtgewalthaltiges Video“).
+
 \subsection{Statistische Analyseverfahren}
+Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Ebenfalls mit SPSS wurde ein Q-Q-Diagram (Quantile-QuantilePlot) erstellt, um die Daten auf Normalverteilung zu prüfen. Das Q-Q-Diagram vergleicht Stichprobendaten mit einer Geraden, die eine Normalverteilung repräsentiert. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Haupthypothese und die Arbeitshypothesen berechnet.
+
+\textit{TBD: Hypothesen beschreiben}
