--- a/header.tex
+++ b/header.tex
@@ -19,6 +19,7 @@
 \usepackage{array}
 \usepackage{multirow}
 \usepackage{xcolor,colortbl}
+\usepackage{pgfplots} %balkendiagramme
 %\usepackage{longtable}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
