--- a/header.tex
+++ b/header.tex
@@ -20,6 +20,7 @@
 \usepackage{multirow}
 \usepackage{xcolor,colortbl}
 \usepackage{pgfplots} %balkendiagramme
+\pgfplotsset{compat=1.15}
 %\usepackage{longtable}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
