--- a/main.tex
+++ b/main.tex
@@ -88,9 +88,13 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \renewcommand{\appendixname}{Anhang} 
 
 % Stichprobe
-% AAS Fragebogen
 \section{Gesamtstichprobe}\label{app:Gesamtstichprobe}
 \input{content/Anhang/Stichprobe.tex}
+\newpage
+
+% Tabellen Mediennutzung
+\section{Tabellen und Grafiken Mediennutzung}\label{app:TablesMediennutzung}
+\input{content/Anhang/TabellenMediennutzung.tex}
 \newpage
 
 % AAS Fragebogen
